--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mobx-react-lite": "^4.0.7",
     "mobx-state-tree": "^6.0.1",
     "react": "^18.3.1",
+    "react-circular-slider-svg": "^0.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
